samples/_failures_safe/1761242012_d1009b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7079fd0.c: In function ‘main’:
./samples/SAFE/__tmp_c7079fd0.c:172:12: error: expected expression at end of input
  172 |     struct MatrixResult product_result =
      |            ^~~~~~~~~~~~
./samples/SAFE/__tmp_c7079fd0.c:172:12: error: expected declaration or statement at end of input
